--- a/PythonInterfaceOOP/configs/configAnalysisData.json
+++ b/PythonInterfaceOOP/configs/configAnalysisData.json
@@ -60,10 +60,19 @@
         "cfgMuonCuts": "muonQualityCuts",
         "cfgPairCuts": "",
         "cfgAddSEPHistogram": "barrel,vertexing,flow",
+        "cfgFlatTables": "false",
+        "cfgUseKFVertexing": "false",
+        "cfgUseRemoteField": "false",
+        "cfgMagField": "5.0",
         "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
+        "grpmagPath": "GLO/Config/GRPMagField",
+        "cfgUseAbsDCA": "false",
+        "cfgPropToPCA": "false",
         "ccdb-path": "Users\/lm",
         "ccdb-no-later-than": "1638360910432",
         "processDecayToEESkimmed": "true",
+        "processDecayToEESkimmedWithCov": "false",
+        "processDecayToEEVertexingSkimmed": "false",
         "processDecayToEEPrefilterSkimmed": "false",
         "processDecayToMuMuSkimmed": "true",
         "processDecayToMuMuVertexingSkimmed": "false",
