--- a/PythonInterfaceOOP/configs/configAnalysisMC.json
+++ b/PythonInterfaceOOP/configs/configAnalysisMC.json
@@ -37,6 +37,13 @@
         "cfgBarrelMCRecSignals": "eeFromJpsi,eeFromLMeeLF,dielectron",
         "cfgBarrelMCGenSignals": "Jpsi",
         "cfgFlatTables": "false",
+        "cfgUseKFVertexing": "false",
+        "cfgUseRemoteField": "false",
+        "cfgMagField": "5.0",
+        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
+        "grpmagPath": "GLO/Config/GRPMagField",
+        "cfgUseAbsDCA": "false",
+        "cfgPropToPCA": "false",
         "processDecayToEESkimmed": "true",
         "processDecayToEEVertexingSkimmed": "false",
         "processDecayToMuMuSkimmed": "false",
