--- a/PythonInterfaceOOP/configs/configV0SelectorDataRun3.json
+++ b/PythonInterfaceOOP/configs/configV0SelectorDataRun3.json
@@ -33,6 +33,7 @@
     "track-selection": {
         "compatibilityIU": "false",
         "isRun3": "true",
+        "produceFBextendedTable": "false",
         "itsMatching": "1",
         "ptMin": "0.1",
         "ptMax": "1e+10",
@@ -71,27 +72,23 @@
         "ccdburl": "http://alice-ccdb.cern.ch",
         "ccdbpath": "Centrality/Estimators",
         "genname": "",
+        "doNotCrashOnNull": "false",
         "processRun2": "false",
         "processRun3": "true"
     },
     "weak-decay-indices-cascades": "",
     "weak-decay-indices-v0": "",
     "v0-selector": {
-        "d_bz_input": "-999",
+        "v0max_mee" : "0.1",
+        "maxpsipair" : "1.6",
         "v0cospa": "0.998",
-        "v0max_mee" : "0.06",
-        "maxpsipair" : "0.3",
         "dcav0dau": "0.3",
         "v0Rmin": "0",
         "v0Rmax": "90.0",
         "dcamin": "0",
         "dcamax": "1e+10",
         "mincrossedrows": "70",
-        "maxchi2tpc": "4",
-        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
-        "lutPath": "GLO\/Param\/MatLUT",
-        "geoPath": "GLO\/Config\/GeometryAligned",
-        "grpmagPath": "GLO/Config/GRPMagField"
+        "maxchi2tpc": "4"
     },
     "track-pid-qa": {
         "dcamin": "0",
@@ -101,17 +98,16 @@
         "processQA": "true",
         "processDummy": "false"
     },
-    "v0-gamma-qa": {
-        "processNM": "false",
-        "processDummy": "true"
-    },
     "tof-pid": {
         "param-file": "",
         "param-sigma": "TOFResoParams",
         "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
         "ccdbPath": "Analysis\/PID\/TOF",
+        "passName": "",
         "ccdb-timestamp": "-1",
         "enableTimeDependentResponse": "false",
+        "useParamCollection": "false",
+        "fatalOnPassNotAvailable": "true",
         "pid-el": "-1",
         "pid-mu": "-1",
         "pid-pi": "-1",
@@ -129,8 +125,11 @@
         "param-sigma": "TOFResoParams",
         "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
         "ccdbPath": "Analysis\/PID\/TOF",
+        "passName": "",
         "ccdb-timestamp": "-1",
         "enableTimeDependentResponse": "false",
+        "useParamCollection": "false",
+        "fatalOnPassNotAvailable": "true",
         "pid-el": "1",
         "pid-mu": "1",
         "pid-pi": "1",
@@ -151,6 +150,7 @@
         "useNetworkCorrection": "false",
         "autofetchNetworks": "true",
         "networkPathLocally": "network.onnx",
+        "networkSetNumThreads": "0",
         "enableNetworkOptimizations": "true",
         "networkPathCCDB": "Analysis\/PID\/TPC\/ML",
         "pid-el": "1",
