--- a/PythonInterfaceOOP/configs/configFlowDataRun2.json
+++ b/PythonInterfaceOOP/configs/configFlowDataRun2.json
@@ -33,6 +33,7 @@
     "track-selection": {
         "compatibilityIU": "false",
         "isRun3": "false",
+        "produceFBextendedTable": "false",
         "itsMatching": "0",
         "ptMin": "0.1",
         "ptMax": "1e+10",
@@ -71,6 +72,7 @@
         "ccdburl": "http:\/\/alice-ccdb.cern.ch",
         "ccdbpath": "Centrality\/Estimators",
         "genname": "",
+        "doNotCrashOnNull": "false",
         "processRun2": "true",
         "processRun3": "false"
     },
@@ -79,8 +81,11 @@
         "param-sigma": "TOFResoParams",
         "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
         "ccdbPath": "Analysis\/PID\/TOF",
+        "passName": "",
         "ccdb-timestamp": "-1",
         "enableTimeDependentResponse": "false",
+        "useParamCollection": "false",
+        "fatalOnPassNotAvailable": "true",
         "pid-el": "1",
         "pid-mu": "1",
         "pid-pi": "1",
@@ -101,6 +106,7 @@
         "useNetworkCorrection": "false",
         "autofetchNetworks": "true",
         "networkPathLocally": "network.onnx",
+        "networkSetNumThreads": "0",
         "enableNetworkOptimizations": "true",
         "networkPathCCDB": "Analysis\/PID\/TPC\/ML",
         "pid-el": "1",
@@ -130,7 +136,7 @@
     "tof-pid-beta": {
         "tof-expreso": "80"
     },
-    "analysis-qvector": {
+    "d-q-event-qvector": {
         "cfgEventCuts": "eventStandard",
         "cfgBarrelTrackCuts": "jpsiPID1",
         "cfgMuonCuts": "muonQualityCuts",
@@ -148,9 +154,10 @@
         "ccdb-url": "http:\/\/ccdb-test.cern.ch:8080",
         "ccdb-path": "Users\/lm",
         "ccdb-no-later-than": "1660516676044",
-        "processBarrelQvector":"true",
+        "processBarrelQvector": "false",
+        "processBarrelQvectorRun2": "true",
         "processForwardQvector": "false",
-        "processDummy":"false"
+        "processDummy": "false"
     },
     "internal-dpl-aod-global-analysis-file-sink": "",
     "internal-dpl-aod-writer": ""
