--- a/PythonInterfaceOOP/configs/configTableMakerDataRun3.json
+++ b/PythonInterfaceOOP/configs/configTableMakerDataRun3.json
@@ -9,6 +9,8 @@
         "step-value-enumeration": "1",
         "aod-file": "@infiles/run3pilotMC_LHC21k6.txt"
     },
+    "internal-dpl-aod-global-analysis-file-sink": "",
+    "internal-dpl-aod-writer": "",
     "internal-dpl-aod-spawner": "",
     "internal-dpl-aod-index-builder": "",
     "timestamp-task": {
@@ -33,6 +35,7 @@
     "track-selection": {
         "compatibilityIU": "false",
         "isRun3": "true",
+        "produceFBextendedTable": "false",
         "itsMatching": "1",
         "ptMin": "0.1",
         "ptMax": "1e+10",
@@ -58,60 +61,16 @@
         "processRun2": "false",
         "processRun3": "true"
     },
-    "centrality-table": {
-        "estRun2V0M": "-1",
-        "estRun2SPDtks": "-1",
-        "estRun2SPDcls": "-1",
-        "estRun2CL0": "-1",
-        "estRun2CL1": "-1",
-        "estFV0A": "-1",
-        "estFT0M": "-1",
-        "estFDDM": "-1",
-        "estNTPV": "-1",
-        "ccdburl": "http://alice-ccdb.cern.ch",
-        "ccdbpath": "Centrality/Estimators",
-        "genname": "",
-        "processRun2": "false",
-        "processRun3": "true"
-    },
-    "weak-decay-indices-cascades": "",
-    "weak-decay-indices-v0": "",
-    "v0-selector": {
-        "d_bz_input": "-999",
-        "v0cospa": "0.998",
-        "v0max_mee" : "0.06",
-        "maxpsipair" : "0.3",
-        "dcav0dau": "0.3",
-        "v0Rmin": "0",
-        "v0Rmax": "90.0",
-        "dcamin": "0",
-        "dcamax": "1e+10",
-        "mincrossedrows": "70",
-        "maxchi2tpc": "4",
-        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
-        "lutPath": "GLO\/Param\/MatLUT",
-        "geoPath": "GLO\/Config\/GeometryAligned",
-        "grpmagPath": "GLO/Config/GRPMagField"
-    },
-    "track-pid-qa": {
-        "dcamin": "0",
-        "dcamax": "1e+10",
-        "mincrossedrows": "70",
-        "maxchi2tpc": "4",
-        "processQA": "true",
-        "processDummy": "false"
-    },
-    "v0-gamma-qa": {
-        "processNM": "false",
-        "processDummy": "true"
-    },
     "tof-pid": {
         "param-file": "",
         "param-sigma": "TOFResoParams",
         "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
         "ccdbPath": "Analysis\/PID\/TOF",
+        "passName": "",
         "ccdb-timestamp": "-1",
         "enableTimeDependentResponse": "false",
+        "useParamCollection": "false",
+        "fatalOnPassNotAvailable": "true",
         "pid-el": "-1",
         "pid-mu": "-1",
         "pid-pi": "-1",
@@ -129,8 +88,11 @@
         "param-sigma": "TOFResoParams",
         "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
         "ccdbPath": "Analysis\/PID\/TOF",
+        "passName": "",
         "ccdb-timestamp": "-1",
         "enableTimeDependentResponse": "false",
+        "useParamCollection": "false",
+        "fatalOnPassNotAvailable": "true",
         "pid-el": "1",
         "pid-mu": "1",
         "pid-pi": "1",
@@ -151,6 +113,7 @@
         "useNetworkCorrection": "false",
         "autofetchNetworks": "true",
         "networkPathLocally": "network.onnx",
+        "networkSetNumThreads": "0",
         "enableNetworkOptimizations": "true",
         "networkPathCCDB": "Analysis\/PID\/TPC\/ML",
         "pid-el": "1",
@@ -180,6 +143,72 @@
     "tof-pid-beta": {
         "tof-expreso": "80"
     },
+    "d-q-event-selection-task": {
+        "cfgEventCuts": "eventStandardNoINT7",
+        "cfgWithQA": "false",
+        "processEventSelection": "true",
+        "processDummy": "false"
+    },
+    "d-q-barrel-track-selection": {
+        "cfgBarrelTrackCuts": "jpsiO2MCdebugCuts2,jpsiO2MCdebugCuts2,jpsiO2MCdebugCuts3,jpsiO2MCdebugCuts3,jpsiO2MCdebugCuts,jpsiO2MCdebugCuts",
+        "cfgWithQA": "false",
+        "ccdb-path-tpc": "Users/i/iarsene/Calib/TPCpostCalib",
+        "cfgTPCpostCalib": "false",
+        "processSelection": "true",
+        "processDummy": "false"
+    },
+    "d-q-muons-selection": {
+        "cfgMuonsCuts": "muonHighPt",
+        "cfgWithQA": "false",
+        "processSelection": "true",
+        "processDummy": "false"
+    },
+    "d-q-filter-p-p-task": {
+        "cfgBarrelSels": "jpsiO2MCdebugCuts2::1,jpsiO2MCdebugCuts2::2,jpsiO2MCdebugCuts3::1,jpsiO2MCdebugCuts3::2,jpsiO2MCdebugCuts::1,jpsiO2MCdebugCuts::2",
+        "cfgMuonSels": "muonHighPt::1",
+        "cfgWithQA": "false",
+        "processFilterPP": "true",
+        "processDummy": "false"
+    },
+    "centrality-table": {
+        "estRun2V0M": "-1",
+        "estRun2SPDtks": "-1",
+        "estRun2SPDcls": "-1",
+        "estRun2CL0": "-1",
+        "estRun2CL1": "-1",
+        "estFV0A": "-1",
+        "estFT0M": "-1",
+        "estFDDM": "-1",
+        "estNTPV": "-1",
+        "ccdburl": "http://alice-ccdb.cern.ch",
+        "ccdbpath": "Centrality/Estimators",
+        "genname": "",
+        "doNotCrashOnNull": "false",
+        "processRun2": "false",
+        "processRun3": "true"
+    },
+    "weak-decay-indices-cascades": "",
+    "weak-decay-indices-v0": "",
+    "v0-selector": {
+        "v0max_mee" : "0.1",
+        "maxpsipair" : "1.6",
+        "v0cospa": "0.998",
+        "dcav0dau": "0.3",
+        "v0Rmin": "0",
+        "v0Rmax": "90.0",
+        "dcamin": "0",
+        "dcamax": "1e+10",
+        "mincrossedrows": "70",
+        "maxchi2tpc": "4"
+    },
+    "track-pid-qa": {
+        "dcamin": "0",
+        "dcamax": "1e+10",
+        "mincrossedrows": "70",
+        "maxchi2tpc": "4",
+        "processQA": "true",
+        "processDummy": "false"
+    },
     "dalitz-pairing": {
         "cfgEventCuts": "eventStandard",
         "cfgDalitzTrackCuts": "",
@@ -190,10 +219,13 @@
         "cfgEtaCut": "0.9",
         "cfgTPCNSigElLow": "-3",
         "cfgTPCNSigElHigh": "3",
+        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
+        "ccdb-path-tpc": "Users/i/iarsene/Calib/TPCpostCalib",
+        "cfgTPCpostCalib": "false",
         "processFullTracks": "true",
         "processDummy": "false"
     },
-    "analysis-qvector": {
+    "d-q-event-qvector": {
         "cfgEventCuts": "eventStandard",
         "cfgBarrelTrackCuts": "jpsiO2MCdebugCuts2,jpsiO2MCdebugCuts3,jpsiO2MCdebugCuts,kaonPID",
         "cfgMuonCuts": "muonQualityCuts,muonTightQualityCutsForTests",
@@ -212,35 +244,15 @@
         "ccdb-path": "Users\/lm",
         "ccdb-no-later-than": "1660516676044",
         "processBarrelQvector": "true",
+        "processBarrelQvectorRun2": "false",
         "processForwardQvector": "false",
         "processDummy": "false"
     },
-    "d-q-barrel-track-selection-task": {
-        "cfgBarrelTrackCuts": "jpsiO2MCdebugCuts2",
-        "cfgWithQA": "false",
-        "processSelection": "true",
-        "processSelectionTiny": "false",
-        "processDummy": "false"
-    },
-    "d-q-muons-selection": {
-        "cfgMuonsCuts": "muonHighPt",
-        "cfgWithQA": "false",
-        "processSelection": "true",
-        "processDummy": "false"
-    },
-    "d-q-event-selection-task": {
-        "cfgEventCuts": "eventStandardNoINT7",
-        "cfgWithQA": "false",
-        "processEventSelection": "true",
-        "processDummy": "false"
-    },
-    "d-q-filter-p-p-task": {
-        "cfgBarrelSels": "jpsiO2MCdebugCuts2::1",
-        "cfgMuonSels": "muonHighPt::1",
-        "cfgWithQA": "false",
-        "processFilterPP": "true",
-        "processFilterPPTiny": "false",
-        "processDummy": "false"
+    "collision-converter": {
+        "doNotSwap": "true",
+        "debug": "false",
+        "nbins": "1",
+        "tolerance": "1e-3"
     },
     "table-maker": {
         "cfgEventCuts": "eventStandardNoINT7",
@@ -262,12 +274,17 @@
         "cfgTPCpostCalib": "false",
         "processFull": "false",
         "processFullWithCov": "false",
+        "processFullWithCovAndEventFilter": "false",
         "processFullWithCent": "false",
+        "processFullWithCentAndMults": "false",
         "processBarrelOnlyWithV0Bits": "false",
         "processBarrelOnlyWithDalitzBits": "false",
         "processBarrelOnlyWithEventFilter": "false",
-        "processBarrelOnlyWithQvector" : "false",
+        "processBarrelOnlyWithQvector": "false",
+        "processBarrelOnlyWithMults": "false",
+        "processBarrelOnlyWithCovAndEventFilter": "false",
         "processBarrelOnlyWithCent": "false",
+        "processBarrelOnlyWithCentAndMults": "false",
         "processBarrelOnlyWithCov": "false",
         "processBarrelOnly": "false",
         "processMuonOnlyWithCent": "false",
@@ -276,9 +293,8 @@
         "processMuonOnlyWithQvector": "false",
         "processMuonOnlyWithFilter": "false",
         "processAmbiguousMuonOnly": "false",
+        "processAmbiguousMuonOnlyWithCov": "false",
         "processAmbiguousBarrelOnly": "false",
         "processOnlyBCs": "true"
-    },
-    "internal-dpl-aod-global-analysis-file-sink": "",
-    "internal-dpl-aod-writer": ""
+    }
 }
