--- a/PythonInterfaceOOP/configs/configTableMakerMCRun3.json
+++ b/PythonInterfaceOOP/configs/configTableMakerMCRun3.json
@@ -34,6 +34,7 @@
     "track-selection": {
         "compatibilityIU": "false",
         "isRun3": "true",
+        "produceFBextendedTable": "false",
         "itsMatching": "1",
         "ptMin": "0.1",
         "ptMax": "1e+10",
@@ -72,6 +73,7 @@
         "ccdburl": "http://alice-ccdb.cern.ch",
         "ccdbpath": "Centrality/Estimators",
         "genname": "",
+        "doNotCrashOnNull": "false",
         "processRun2": "false",
         "processRun3": "true"
     },
@@ -80,8 +82,11 @@
         "param-sigma": "TOFResoParams",
         "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
         "ccdbPath": "Analysis\/PID\/TOF",
+        "passName": "",
         "ccdb-timestamp": "-1",
         "enableTimeDependentResponse": "false",
+        "useParamCollection": "false",
+        "fatalOnPassNotAvailable": "true",
         "pid-el": "-1",
         "pid-mu": "-1",
         "pid-pi": "-1",
@@ -99,8 +104,11 @@
         "param-sigma": "TOFResoParams",
         "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
         "ccdbPath": "Analysis\/PID\/TOF",
+        "passName": "",
         "ccdb-timestamp": "-1",
         "enableTimeDependentResponse": "false",
+        "useParamCollection": "false",
+        "fatalOnPassNotAvailable": "true",
         "pid-el": "1",
         "pid-mu": "1",
         "pid-pi": "1",
@@ -121,6 +129,7 @@
         "useNetworkCorrection": "false",
         "autofetchNetworks": "true",
         "networkPathLocally": "network.onnx",
+        "networkSetNumThreads": "0",
         "enableNetworkOptimizations": "true",
         "networkPathCCDB": "Analysis\/PID\/TPC\/ML",
         "pid-el": "1",
@@ -160,6 +169,9 @@
         "cfgEtaCut": "0.9",
         "cfgTPCNSigElLow": "-3",
         "cfgTPCNSigElHigh": "3",
+        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
+        "ccdb-path-tpc": "Users/i/iarsene/Calib/TPCpostCalib",
+        "cfgTPCpostCalib": "false",
         "processFullTracks": "true",
         "processDummy": "false"
     },
@@ -182,12 +194,24 @@
         "processFull": "false",
         "processFullWithCov": "false",
         "processBarrelOnly": "false",
+        "processBarrelOnlyWithMults": "false",
         "processBarrelOnlyWithCent": "false",
+        "processBarrelOnlyWithCentAndMults": "false",
         "processBarrelOnlyWithCov": "false",
         "processBarrelOnlyWithDalitzBits": "false",
+        "processMuonOnly": "false",
         "processMuonOnlyWithCov": "false",
         "processMuonOnlyWithCent": "false",
+        "processAmbiguousMuonOnly": "false",
+        "processAmbiguousMuonOnlyWithCov": "false",
+        "processAmbiguousBarrelOnly": "false",
         "processOnlyBCs": "true"
+    },
+    "collision-converter": {
+        "doNotSwap": "true",
+        "debug": "false",
+        "nbins": "1",
+        "tolerance": "1e-3"
     },
     "internal-dpl-aod-global-analysis-file-sink": "",
     "internal-dpl-aod-writer": ""
