--- a/PythonInterfaceOOP/configs/configFilterPPDataRun2.json
+++ b/PythonInterfaceOOP/configs/configFilterPPDataRun2.json
@@ -13,9 +13,9 @@
     "internal-dpl-aod-writer": "",
     "timestamp-task": {
         "verbose": "false",
-        "rct-path": "RCT\/Info\/RunInformation",
-        "orbit-reset-path": "CTP\/Calib\/OrbitReset",
-        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
+        "rct-path": "RCT/Info/RunInformation",
+        "orbit-reset-path": "CTP/Calib/OrbitReset",
+        "ccdb-url": "http://alice-ccdb.cern.ch",
         "isRun2MC": "false"
     },
     "event-selection-task": {
@@ -27,13 +27,14 @@
         "processRun3": "false"
     },
     "bc-selection-task": {
+        "triggerBcShift": "999",
         "processRun2": "true",
         "processRun3": "false"
     },
     "track-selection": {
-        "compatibilityIU": "false",
         "isRun3": "false",
         "produceFBextendedTable": "false",
+        "compatibilityIU": "false",
         "itsMatching": "0",
         "ptMin": "0.1",
         "ptMax": "1e+10",
@@ -41,11 +42,11 @@
         "etaMax": "0.8"
     },
     "track-propagation": {
-        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
-        "lutPath": "GLO\/Param\/MatLUT",
-        "geoPath": "GLO\/Config\/GeometryAligned",
-        "grpPath": "GLO\/GRP\/GRP",
-        "mVtxPath": "GLO\/Calib\/MeanVertex",
+        "ccdb-url": "http://alice-ccdb.cern.ch",
+        "lutPath": "GLO/Param/MatLUT",
+        "geoPath": "GLO/Config/GeometryAligned",
+        "grpmagPath": "GLO/Config/GRPMagField",
+        "mVtxPath": "GLO/Calib/MeanVertex",
         "processStandard": "false",
         "processCovariance": "true"
     },
@@ -62,8 +63,8 @@
     "tof-pid": {
         "param-file": "",
         "param-sigma": "TOFResoParams",
-        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
-        "ccdbPath": "Analysis\/PID\/TOF",
+        "ccdb-url": "http://alice-ccdb.cern.ch",
+        "ccdbPath": "Analysis/PID/TOF",
         "passName": "",
         "ccdb-timestamp": "-1",
         "enableTimeDependentResponse": "false",
@@ -84,8 +85,8 @@
     "tof-pid-full": {
         "param-file": "",
         "param-sigma": "TOFResoParams",
-        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
-        "ccdbPath": "Analysis\/PID\/TOF",
+        "ccdb-url": "http://alice-ccdb.cern.ch",
+        "ccdbPath": "Analysis/PID/TOF",
         "passName": "",
         "ccdb-timestamp": "-1",
         "enableTimeDependentResponse": "false",
@@ -101,19 +102,20 @@
         "pid-he": "-1",
         "pid-al": "-1",
         "processWSlice": "true",
-        "processWoSlice": "false"
+        "processWoSlice": "false",
+        "processWoSliceDev": "false"
     },
     "tpc-pid-full": {
         "param-file": "",
-        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
-        "ccdbPath": "Analysis\/PID\/TPC\/Response",
+        "ccdb-url": "http://alice-ccdb.cern.ch",
+        "ccdbPath": "Analysis/PID/TPC/Response",
         "ccdb-timestamp": "0",
         "useNetworkCorrection": "false",
         "autofetchNetworks": "true",
         "networkPathLocally": "network.onnx",
-        "networkSetNumThreads": "0",
+        "networkPathCCDB": "Analysis/PID/TPC/ML",
         "enableNetworkOptimizations": "true",
-        "networkPathCCDB": "Analysis\/PID\/TPC\/ML",
+        "networkSetNumThreads": "0",
         "pid-el": "1",
         "pid-mu": "1",
         "pid-pi": "1",
@@ -127,19 +129,29 @@
     "tof-event-time": {
         "minMomentum": "0.5",
         "maxMomentum": "2.0",
+        "maxEvTimeTOF": "100000.0",
         "param-file": "",
         "param-sigma": "TOFReso",
-        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
-        "ccdbPath": "Analysis\/PID\/TOF",
+        "ccdb-url": "http://alice-ccdb.cern.ch",
+        "ccdbPath": "Analysis/PID/TOF",
         "ccdb-timestamp": "-1",
         "processRun2": "false",
         "processNoFT0": "true",
         "processFT0": "false",
         "processOnlyFT0": "false"
     },
-    "tof-signal": "",
+    "tof-signal": {
+        "processRun3": "false",
+        "processRun2": "true"
+    },
     "tof-pid-beta": {
         "tof-expreso": "80"
+    },
+    "collision-converter": {
+        "doNotSwap": "false",
+        "debug": "false",
+        "nbins": "1",
+        "tolerance": "1e-3"
     },
     "d-q-event-selection-task": {
         "cfgEventCuts": "eventStandard",
@@ -150,6 +162,7 @@
     "d-q-barrel-track-selection": {
         "cfgBarrelTrackCuts": "jpsiPID2,jpsiPID1",
         "cfgWithQA": "false",
+        "ccdb-url": "http://alice-ccdb.cern.ch",
         "ccdb-path-tpc": "Users/i/iarsene/Calib/TPCpostCalib",
         "cfgTPCpostCalib": "false",
         "processSelection": "true",
